--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,9 +1,11 @@
-<div class="container">
+<div class="container mt-3">
   <div class="row">
+
     <section class="col-3">
-      <h5 class="text-warning ml-3">Sort</h5>
+      <ng-container *ngIf="types && brands">
+      <h5 class="text-warning ml-3 mt-4 mb-3">Sort</h5>
       <select
-        class="custom-select mb-3"
+        class="custom-select mb-4"
         (change)="onSortSelected($event.target.value)"
       >
         <option *ngFor="let sort of sortOptions" [value]="sort.value">
@@ -35,6 +37,7 @@
           {{ type.name }}
         </li>
       </ul>
+    </ng-container>
     </section>
 
     <section class="col-9">
@@ -46,7 +49,7 @@
             [pageNumber]="this.shopParams.pageNumber"
         ></app-paging-header>
 
-        <div class="form-inline mt-2">
+        <div class="form-inline" *ngIf="products">
           <input (keyup.enter)="onSearch()" class="form-control mr-2" #search style="width: 300px"
             placeholder="Search" type="text"/>
           <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
