--- a/client/src/app/shop/product-details/product-details.component.html
+++ b/client/src/app/shop/product-details/product-details.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="col-6">
       <h3>{{product.name}}</h3>
-      <p style="font-size: 2em;">{{product.price | currency}}</p>
+      <p style="font-size: 2em;">{{product.price * quantity | currency}}</p>
       <div class="d-flex justify-content-start align-items-center">
         <i (click)="decreamentQuantity()" class="fa fa-minus-circle text-warning mr-2" style="cursor: pointer; font-size: 2em;"></i>
         <span class="font-weight-bold" style="font-size: 1.5em;">{{quantity}}</span>
@@ -21,5 +21,3 @@
     </div>
   </div>
 </div>
-
-
