--- a/client/src/app/checkout/checkout-review/checkout-review.component.html
+++ b/client/src/app/checkout/checkout-review/checkout-review.component.html
@@ -8,10 +8,10 @@
 </div>
 
 <div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
-  <button class="btn btn-outline-primary" cdkStepperPrevious="/basket">
+  <button class="btn btn-outline-primary" cdkStepperPrevious>
       <i class="fa fa-angle-left"></i> Back to Delivery
   </button>
-  <button class="btn btn-primary" cdkStepperNext>
+  <button class="btn btn-primary" (click)="createPaymentIntent()">
       Go to Payment <i class="fa fa-angle-right"></i>
   </button>
 </div>
