--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -8,7 +8,9 @@
         class="custom-select mb-4"
         (change)="onSortSelected($event.target.value)"
       >
-        <option *ngFor="let sort of sortOptions" [value]="sort.value">
+        <option *ngFor="let sort of sortOptions"
+          [selected]="shopParams.sort === sort.value"
+          [value]="sort.value">
           {{ sort.name }}
         </option>
       </select>
@@ -67,6 +69,7 @@
           <app-pager
               [pageSize]="shopParams.pageSize"
               [totalCount]="totalCount"
+              [pageNumber]="shopParams.pageNumber"
               (pageChanged)="onPageChanged($event)"
           ></app-pager>
       </div>
